--- a/app/public/home.html
+++ b/app/public/home.html
@@ -28,8 +28,8 @@
 
             <h1 class="text-center"><i class="fa fa-female"></i> Friend Finder <i class="fa fa-male"></i></h1>
             <hr>
-            <h2 class="text-center">Looking for a new friend to just hang out with?</h2>
-            <h2 class="text-center">Fill out the survey to find a compatible friend</h2>
+            <h2 class="text-center">Want to meet some new friends?</h2>
+            <h2 class="text-center">Fill out this survey to find yourrself a buddy!</h2>
             <br>
 
             <div class="text-center">
