--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -48,7 +48,7 @@
                         <h3><strong>Survey Questions</strong></h3>
                         <hr>
 
-                        <h3>You want a friend who is always ready to help you.</h3>
+                        <h3>You want a friend who enjoys gaming.</h3>
                         <select data-placeholder="" class="chosen-select" id="q1">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -59,7 +59,7 @@
                         </select>
 
 
-                        <h3>Strong moral views are important qualities for a friend.</h3>
+                        <h3>You want a friend who knows where to find the best memes.</h3>
                         <select data-placeholder="" class="chosen-select" id="q2">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -70,7 +70,7 @@
                         </select>
 
 
-                        <h3>You like friends who are quirky.</h3>
+                        <h3>You want a friends who prefers subs over dubs.</h3>
                         <select data-placeholder="" class="chosen-select" id="q3">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -81,7 +81,7 @@
                         </select>
 
 
-                        <h3>You like friends who are spontaneous.</h3>
+                        <h3>You like friends who are into e-sports.</h3>
                         <select data-placeholder="" class="chosen-select" id="q4">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -92,7 +92,7 @@
                         </select>
 
 
-                        <h3>You value friends who are loud and funny instead of quiet and shy.</h3>
+                        <h3>You value friends who will help you beat that one really tough boss battle.</h3>
                         <select data-placeholder="" class="chosen-select" id="q5">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -102,7 +102,7 @@
                             <option value="5">5 (Strongly Agree)</option>
                         </select>
 
-                        <h3>You want a friend who would rather read a book than go on an adventure.  </h3>
+                        <h3>You want a friend who would rather drive than be driven.  </h3>
                         <select data-placeholder="" class="chosen-select" id="q9">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -112,7 +112,7 @@
                             <option value="5">5 (Strongly Agree)</option>
                         </select>
 
-                        <h3>You like friends who are not afraid to disagree with you.</h3>
+                        <h3>You like friends who will challenge you.</h3>
                         <select data-placeholder="" class="chosen-select" id="q10">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -122,7 +122,7 @@
                             <option value="5">5 (Strongly Agree)</option>
                         </select>
 
-                        <h3>You need a friend who loves being outdoors.</h3>
+                        <h3>You need pictures of Spider-Man on your desk by the end of the day.</h3>
                         <select data-placeholder="" class="chosen-select" id="q6">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -132,7 +132,7 @@
                             <option value="5">5 (Strongly Agree)</option>
                         </select>
 
-                        <h3>Your idea of a fun get together involves going to sporting events.</h3>
+                        <h3>You beleive that your friends are your power.</h3>
                         <select data-placeholder="" class="chosen-select" id="q7">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
@@ -142,7 +142,7 @@
                             <option value="5">5 (Strongly Agree)</option>
                         </select>
 
-                        <h3>You would much rather go to a restaurant and a movie than get together with friends and play games.</h3>
+                        <h3>You would much rather go to a conevtion than a club.</h3>
                         <select data-placeholder="" class="chosen-select" id="q8">
                             <option value=""></option>
                             <option selected="selected" value="1">1 (Strongly Disagree)</option>
