--- a/app/public/home.html
+++ b/app/public/home.html
@@ -26,7 +26,7 @@
         <div class="jumbotron">
             <!--<span class="glyphicon glyphicon-link"></span> -->
 
-            <h1 class="text-center"><i class="fa fa-female"></i> Friend Finder <i class="fa fa-male"></i></h1>
+            <h1 class="text-center"><i class="fa fa-male"></i> Friend Finder <i class="fa fa-male"></i></h1>
             <hr>
             <h2 class="text-center">Want to meet some new friends?</h2>
             <h2 class="text-center">Fill out this survey to find yourrself a buddy!</h2>
